--- a/penombre.css
+++ b/penombre.css
@@ -741,9 +741,17 @@ body.theme-dark .penombre.eminence .eminence-content .eminence-timbre-2 .frise-p
   height: 100px;
   width: 477px;
 }
+.penombre.eminence .eminence-content .eminence-recapitulatif .content .tableau .div-gauche .img-gauche {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
 .penombre.eminence .eminence-content .eminence-recapitulatif .content .tableau .div-droite {
   float: left;
   height: 100px;
   width: 142px;
   padding-left: 23px;
+}
+.penombre.eminence .eminence-content .eminence-recapitulatif .content .tableau .div-droite .img-droite {
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
